# ignissynth

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES-v0.1.0.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
axioms/: A0-first-principles.md  A1-matter.md  A2-capability.md  A3-attention.md  A4-intent.md  A5-causality.md  A6-fluid-code.md  A7-self-modification.md  A8-bridges.md  A9-ignition-substrate.md
breakdown/: 00-SEED-TASKS.md  S-01-ignite.md  S-02-cap-registry.md  S-03-substance-store.md  S-04-weave-log.md  S-05-attention-alloc.md  S-06-intent-match.md  S-07-form-runtime.md  S-08-proof-checker.md  S-09-synth-kernel.md  S-10-hephaistion-seed.md  S-11-bridge-proto.md  _TEMPLATE.md
docs/: GLOSSARY.md  MANIFESTO.md
ignis0/: Cargo.toml  README.md  rust-toolchain.toml
ignis0/fuzz/: .gitignore  Cargo.toml  README.md
ignis0/fuzz/fuzz_targets/: decode_form.rs  parse_form_lines.rs
ignis0/src/: capability.rs  derive.rs  envelope.rs  exec.rs  fixed_point.rs  lib.rs  main.rs  opcode.rs  parser.rs  pretty.rs  registry.rs  runner.rs  store.rs  value.rs  verify.rs  wire.rs
ignis0/tests/: envelope_test.rs  fixed_point_test.rs  opcode_tests.rs  wire.rs
kernel/: IGNITION-BOOTSTRAP.md  IL.md  PROOF.md  README.md  SIMULATION.md  lemma-library.md  manifest.json
kernel/forms/: S-01-ignite.form  S-01-ignite.proof  S-02-cap-registry.form  S-02-cap-registry.proof  S-03-substance-store.form  S-03-substance-store.proof  S-04-weave-log.form  S-04-weave-log.proof  S-05-attention-alloc.form  S-05-attention-alloc.proof  S-06-intent-match.form  S-06-intent-match.proof  S-07-form-runtime.form  S-07-form-runtime.proof  S-08-proof-checker.form  S-08-proof-checker.inspection-record.md  S-08-proof-checker.proof  S-09-synth-kernel.form  S-09-synth-kernel.proof  S-10-hephaistion-seed.form  S-10-hephaistion-seed.proof  S-11-bridge-proto.form  S-11-bridge-proto.proof
kernel/forms/helpers/: STUBS.md  canon-normalise.form  compute.form  intrinsics.form  parser-bytes.form  parser-primitives.form  parser.form  primitives.form  s02-s05-projections.form  s04-projections.form  schema-helpers.form
kernel/types/: SCHEMA.md
synthesis/: INVARIANTS.md  PROTOCOL.md  SEED.md  SELF-IMPROVEMENT.md
tools/status/: STATUS.md  build-status.sh  status.json
